fix Details out of box on small screens

--- a/static/css/day.css
+++ b/static/css/day.css
@@ -65,6 +65,7 @@ a {
 	overflow: hidden;
 
     padding: 2vw;
+    padding-bottom: 6vw;
 }
 .rectange:hover { 
     color: yellow;
